--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,8 @@ body {
   font-weight: 400;
   background-color: var(--bg-deepNavyBlue);
   color: var(--text-white);
-  background-image: url('../img/background.png');
-  background-size: cover;
+  /* background-image: url('../img/background.png');
+  background-size: cover; */
 }
 
 *::before,
@@ -1265,6 +1265,99 @@ header {
 }
 
 /*----------------------------------------------
+client_section Styles
+----------------------------------------------*/
+.client_section {
+  background: #171b23;
+}
+
+.client_wrapper {
+  padding: 135px 0;
+}
+
+.client__carousel {
+  max-width: 500px;
+  width: 100%;
+}
+
+.client_wrapper--header {
+  margin-bottom: 50px;
+}
+
+.client_wrapper--header .main_header {
+  max-width: 495px;
+}
+
+.client_section
+  .owl-carousel
+  .owl-item
+  .client__single--carousel
+  img.review_img {
+  display: block;
+  max-width: 40px;
+  width: 100%;
+}
+
+.client__carousel p {
+  max-width: 429px;
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.client__details {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.client__thumb {
+  width: 60px;
+  height: 60px;
+  flex-shrink: 0;
+}
+
+.client__thumb img {
+  width: 100%;
+  height: 100%;
+}
+
+.client__address p {
+  color: var(--text-white);
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: -0.36px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.client__address span {
+  color: #828386;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.owl-carousel .owl-dots {
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+  gap: 10px;
+}
+
+.owl-carousel .owl-dot {
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+}
+
+.owl-carousel .owl-dot.active {
+  background: var(--bg-red);
+}
+
+/*----------------------------------------------
 9. post Section Styles
 ----------------------------------------------*/
 
@@ -1599,7 +1692,7 @@ header {
     gap: 20px;
   }
 
-  .footer_copyRight--social{
+  .footer_copyRight--social {
     flex-direction: column;
   }
 }
